--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02b.htm
@@ -20,18 +20,21 @@ ourselves with the elements of the workbench. A workbench consists of:
   <li>
     editors</li>
 </ul>
-<p CLASS="Intro">An editor is a visual component within the workbench. It is typically used to edit or browse a
-resource.  Modifications made in an editor follow an open-save-close lifecycle model.
-Multiple instances of an editor type may exist within a workbench window.&nbsp;
-</p>
-<p CLASS="Intro">A view is also a visual component within the workbench. It is typically used to
+<p CLASS="Intro">A perspective is a set of views and editors in 
+the workbench window. One or more perspectives can exist in a single workbench 
+window. Each perspective contains one or more views and editors.</p>
+<p CLASS="Intro">A view is  a visual component within the workbench. It is typically used to
 navigate a hierarchy of information (like the resources in your workbench), open an editor,
 or display properties for the active editor.  Modifications made in a view are saved immediately.
 Only one instance of a particular view type may exist within a workbench
 window.&nbsp;<br>
 </p>
+<p CLASS="Intro">An editor is also a visual component within the workbench. It is typically used to edit or browse a
+resource.  Modifications made in an editor follow an open-save-close lifecycle model.
+Multiple instances of an editor type may exist within a workbench window.&nbsp;
+</p>
 <p CLASS="Intro">Editors and views can be active or inactive, but only one view or editor can be active at any one time.&nbsp;
-The active editor or view is the one whose titlebar is highlighted in blue. The active part is the
+The active editor or view is the one whose title bar is highlighted. The active part is the
 target for common operations like cut, copy and paste. The active part also
 determines the contents of the status line. If an editor tab
 is white it indicates the editor is not active, however views may show
