--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02d.htm
@@ -31,12 +31,13 @@ You can stack editors in the editor area and activate individual editors by clic
 editor. You can also tile editors side-by-side in the editor area so their
 content can be viewed simultaneously.
 In the figure below editors for sample.txt and otherFile.txt have been placed
-one above the other.</P>
+one above the other. We will discuss how you can rearrange views and editors 
+later in this tutorial.</P>
 <P><img align="texttop" border="0" src="../images/Image6_two_editors.jpg" width="643" height="496">
 </P>
 
 
-<P>If you open a resource that does not have an associated editor
+<P>If you open a resource that does not have an associated editor,
 the workbench will attempt to launch an external editor registered with your platform.&nbsp;
 These external editors are not tightly integrated with the workbench and are not
 embedded into the workbench's editor area.&nbsp;
