--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
@@ -47,7 +47,7 @@ for sorting and filtering are commonly found on the view pull-down.&nbsp;</P>
  In the event
  you decided to experiment by rearranging your workbench, this is probably a
  good opportunity to use the Perspective &gt; Reset menu operation. The reset
-operation restores the layout&nbsp; to it's original state.&nbsp;</P>
+operation restores the layout&nbsp; to its original state.&nbsp;</P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image3_float.jpg" width="645" height="495"></P>
 <P CLASS="Para">
