--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-10b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-10b.htm
@@ -46,7 +46,7 @@ In the text area add a 6th line of text:
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-To close the editor either:</P>
+To close the editor, do one of the following options:</P>
 <ul>
   <li>
     Click the close button (&quot;X&quot;)
