--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12d.htm
@@ -26,7 +26,8 @@ try this with our JaneQUser project.</P>
 </TD>
 <TD height="21" valign="top" align="left">
 <P CLASS="Para">
-Select the Navigator view, its title bar should now be blue.</P>
+Select the Navigator view. Its title bar will be highlighted (according to your 
+operating system's color scheme).</P>
 </TD>
 </TR>
 <TR>
