--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
@@ -26,8 +26,8 @@ specific resource in the Navigator.&nbsp;</P>
 </TD>
 <TD height="21" valign="top" align="left">
 <P CLASS="Para">
-Select the Navigator view, its title bar should now be blue (although this may
-depend on your platform colors scheme).</P>
+Select the Navigator view. Its title bar will be highlighted (according to your 
+operating system's color scheme).</P>
 </TD>
 </TR>
 <TR>
