Updated copyright images.

--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_expanding_classpath.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_expanding_classpath.htm
@@ -41,4 +41,8 @@ Contributing Ant tasks and types</a> also apply:</P>
 <P >
 &nbsp;</P>
 
-&nbsp;<a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></BODY></HTML>
+&nbsp;
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt=
+"Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border=
+"0"></a>
+</BODY></HTML>
