--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_running_script_programmatically.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_running_script_programmatically.htm
@@ -43,4 +43,8 @@ See <a href="./ant_contributing_task.htm#monitor">Progress Monitors</a> for more
 <P >
 &nbsp;</P>
 
-&nbsp;<a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></BODY></HTML>
+&nbsp;
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt=
+"Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border=
+"0"></a>
+</BODY></HTML>
