--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_contributing_task.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_contributing_task.htm
@@ -115,4 +115,8 @@ contributing plug-in to the Ant classpath as well.
 <p>
 &nbsp;</p>
 
-&nbsp;<a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></BODY></HTML>
+&nbsp;
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt=
+"Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border=
+"0"></a>
+</BODY></HTML>
