--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39.htm
@@ -56,9 +56,9 @@ You can always get back to the welcome page by choosing Help &gt; Welcome.</P>
 </P>
 
 
-<P><a href="qs-39b.htm">
+<P><a href="qs-39c.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
-Floating views</a><P><a href="qs-37-3f.htm">
+Drop cursors</a><P><a href="qs-37-3f.htm">
 <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
 Removing bookmarks</a></P>
 
