--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39c.htm
@@ -11,7 +11,7 @@
 <h3>
 Drop cursors</h3>
 <P CLASS="Para">
-Drop cursors indicate where you can dock floating views in the workbench window.  Several different drop cursors may be displayed when you are
+Drop cursors indicate where you can dock views in the workbench window.  Several different drop cursors may be displayed when you are
 rearranging views.</P>
 <TABLE BORDER="1" cellspacing="0">
 <THEAD>
@@ -25,7 +25,8 @@ rearranging views.</P>
 </TD>
 <TD height="38" valign="top" align="left">
 <P CLASS="Para">
-Dock above: if you release the mouse button when a dock above cursor is displayed, the floating view will appear above the view underneath the cursor.</P>
+Dock above: if you release the mouse button when a dock above cursor is displayed, the
+view will appear above the view underneath the cursor.</P>
 </TD>
 </TR>
 <TR>
@@ -36,7 +37,7 @@ Dock above: if you release the mouse button when a dock above cursor is displaye
 </TD>
 <TD height="38" valign="top" align="left">
 <p CLASS="Para">
-Dock below: if you release the mouse button when a dock below cursor is displayed, the floating view will appear below the view underneath the cursor.
+Dock below: if you release the mouse button when a dock below cursor is displayed, the view will appear below the view underneath the cursor.
 </TD>
 </TR>
 <TR>
@@ -46,7 +47,7 @@ Dock below: if you release the mouse button when a dock below cursor is displaye
 </TD>
 <TD height="38" valign="top" align="left">
 <p CLASS="Para">
-Dock to the right: If you release the mouse button when a dock to the right cursor is displayed, the floating view will appear to the right of the view underneath the cursor.
+Dock to the right: If you release the mouse button when a dock to the right cursor is displayed, the view will appear to the right of the view underneath the cursor.
 </TD>
 </TR>
 <TR>
@@ -54,7 +55,7 @@ Dock to the right: If you release the mouse button when a dock to the right curs
 <img align="texttop" border="0" src="../images/drop_left_source.gif" width="20" height="20">
 </TD>
 <TD height="38" valign="top" align="left">
-Dock to the left: if you release the mouse button when a dock to the left cursor is displayed, the floating view will appear to the left of the view underneath the cursor.
+Dock to the left: if you release the mouse button when a dock to the left cursor is displayed, the view will appear to the left of the view underneath the cursor.
 </TD>
 </TR>
 <TR>
@@ -62,7 +63,7 @@ Dock to the left: if you release the mouse button when a dock to the left cursor
 <img align="texttop" border="0" src="../images/drop_stack.gif" width="20" height="20">
 </TD>
 <TD height="38" valign="top" align="left">
-Stack: if you release the mouse button when a stack cursor is displayed, the floating view will appear as a Tab in the same pane as the view underneath the cursor.
+Stack: if you release the mouse button when a stack cursor is displayed, the view will appear as a Tab in the same pane as the view underneath the cursor.
 </TD>
 </TR>
 <TR>
@@ -70,18 +71,18 @@ Stack: if you release the mouse button when a stack cursor is displayed, the flo
 <img align="texttop" border="0" src="../images/drop_invalid_source.gif" width="21" height="21">
 </TD>
 <TD height="38" valign="top" align="left">
-Restricted: if you release the mouse button when a restricted cursor is displayed, the floating view will not dock there.  For example, you cannot dock a view in the editor area.
+Restricted: if you release the mouse button when a restricted cursor is displayed, the view will not dock there.  For example, you cannot dock a view in the editor area.
 </TD>
 </TR>
 </TBODY>
 </TABLE>
 
 
-<P><a href="qs-39d.htm">
+<P><a href="qs-39e.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
-Docking views</a><P><a href="qs-39b.htm">
+Tiling editors</a><P><a href="qs-39.htm">
 <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
-Floating views</a></P>
+Rearranging views and editors</a></P>
 
 
 <P>
