--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39f.htm
@@ -16,7 +16,7 @@ can also rearrange the order of views within a tabbed notebook.</P>
 <THEAD>
 </THEAD>
 <TBODY>
-<TR>
+<tr>
 <TD height="38" valign="top" align="left">
 <P CLASS="Para">
 <b>
@@ -25,36 +25,44 @@ can also rearrange the order of views within a tabbed notebook.</P>
 </TD>
 <TD height="38" valign="top" align="left">
 <P CLASS="Para">
-Choose Perspective &gt; Reset to reset the Resource perspective back to its
+Choose Window &gt; Reset Perspective to reset the Resource perspective back to its
 original layout.&nbsp;</P>
+</TD>
+</tr>
+<TR>
+<TD height="38" valign="top" align="left">
+<P CLASS="Para">
+<b>2.</b>
+</P>
+</TD>
+<TD height="38" valign="top" align="left">
+<P CLASS="Para">Click on the Outline title bar and drag it on top of the
+Navigator view. The Outline will now be stacked on top of the Navigator.&nbsp;</P>
 </TD>
 </TR>
 <TR>
 <TD height="38" valign="top" align="left">
 <P CLASS="Para">
-<b>
-2.</b>
+<b>3.</b>
 </P>
 </TD>
 <TD height="38" valign="top" align="left">
 <P CLASS="Para">
-Click on the Navigator tab and drag it to the right of the Repositories tab.</P>
+Click on the Navigator tab and drag it to the right of the Outline tab.</P>
 <P CLASS="Para"><img align="texttop" border="0" src="../images/Image60_tabs.jpg" width="160" height="22"></P>
 </TD>
 </TR>
 <TR>
 <TD height="38" valign="top" align="left">
 <P CLASS="Para">
-<b>
-3.</b>
+<b>4.</b>
 </P>
 </TD>
 <TD height="38" valign="top" align="left">
 <P CLASS="Para">
-Once your cursor is to the right of the Repositories tab and the cursor is a
+Once your cursor is to the right of the Outline tab and the cursor is a
 stack cursor release the mouse button.</P>
-<P CLASS="Para">Observe the Navigator tab is now to the right of the
-Repositories tab.</P>
+<P CLASS="Para">Observe the Navigator tab is now to the right of the Outline tab.</P>
 <P CLASS="Para"><img align="texttop" border="0" src="../images/Image60_tabs2.jpg" width="160" height="22"></P>
 </TD>
 </TR>
