--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39g.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39g.htm
@@ -16,10 +16,11 @@
     bar or choose Maximize from the popup menu available from the
     top left corner of the view.</li>
   <li>
-    To maximize an editor double click on the editor tab.</li>
+    To maximize an editor double click on the editor tab or choose Maximize from the popup menu available from the
+    editor tab.</li>
 </ul>
 <p CLASS="Para">Restoring a view to its original size is done in a similar
-manner.</p>
+manner (double click or choose Restore from the menu).</p>
 <P><a href="qs-40.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 Fast views</a></P>
