--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40a.htm
@@ -35,7 +35,7 @@ how to use the view once it is a fast view.&nbsp;</p>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-In the floating Navigator view&nbsp; click on the title bar and drag it to the
+In the Navigator view&nbsp; click on the title bar and drag it to the
 shortcut bar at the far left of the window.&nbsp;</P>
 </TD>
 </TR>
