--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
@@ -127,9 +127,9 @@ another.</P>
 Rearranging tabbed views</a></P>
 
 
-<P><a href="qs-39d.htm">
+<P><a href="qs-39c.htm">
 <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
-Docking views</a></P>
+Drop cursors</a></P>
 
 
 <P>
