--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-77b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-77b.htm
@@ -1,50 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Associating a task with an editable resource</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<a NAME="elementId-1032839"></a><a NAME="pgfId-1032844"></a>
-<h1 CLASS="Head">Associating a task with a resource</h1>
-<p CLASS="Para">You can associate tasks with an editable resource, for example
-to remind yourself to update a line of source code later.</p>
-<ol>
-  <li>
-    <p CLASS="Para">In the Navigator view, double-click the resource with which
-    you wish to associate the new task. The resource opens in the editor area.</li>
-  <li>
-    <p CLASS="Para">Right-click in the gray border at the left of the editor
-    area, beside the line of text or source code against which you want to log
-    the new task.</li>
-  <li>
-    <p CLASS="Para">On the pop-up menu, select <b>Add Task</b>.</li>
-  <li>
-    <p CLASS="Para">When prompted, enter a brief description of the task.</li>
-</ol>
-<p CLASS="Para">A new task icon appears in the border of the editor area, to
-the left of the line where you added the task. When you move the mouse pointer
-over the marker, the description of the task is displayed as a tooltip. The task
-is also added to the Tasks view. You can delete a task either by right-clicking
-its icon in the editor area or by pressing the Delete key in the Tasks view.</p>
-    <p CLASS="Para"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/ctskview.htm"><br>
-    Tasks view<br>
-    </a><a href="../concepts/cbookmrk.htm">Bookmarks
-</a>
-<p CLASS="Para"><a href="tasks-76.htm"><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-</a><a href="tasks-77.htm">Adding line items in the Tasks view</a><a href="tasks-77b.htm"><br>
-</a><a href="tasks-79.htm">Filtering the task list<br>
-</a><a href="tasks-81b.htm">Creating a bookmark for an entire file</a><a href="tasks-81.htm"><br>
-Creating a bookmark within a file</a></p>
-    <p CLASS="Para"><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
-    <a href="../reference/ref-31.htm">Tasks view</a>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Associating a task with an editable resource</title></HEAD><BODY BGCOLOR="#ffffff"><a NAME="elementId-1032839"></a><a NAME="pgfId-1032844"></a><h1>Associating a task with a resource</h1><p>You can associate tasks with an editable resource, for exampleto remind yourself to update a line of source code later.</p><ol>  <li>In the Navigator view, double-click the resource with which    you wish to associate the new task. The resource opens in the editor area.</li>  <li>Right-click in the gray border at the left of the editor    area, beside the line of text or source code against which you want to log    the new task.</li>  <li>On the pop-up menu, select <b>Add Task</b>.</li>  <li>When prompted, enter a brief description of the task.</li></ol><p>A new task icon appears in the border of the editor area, tothe left of the line where you added the task. When you move the mouse pointerover the marker, the description of the task is displayed as a tooltip. The taskis also added to the Tasks view. You can delete a task either by right-clickingits icon in the editor area and selecting <b>Remove Task</b>, or by pressing the Delete key in the Tasks view.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/ctskview.htm">Tasks view</a><br><a href="../concepts/cbookmrk.htm">Bookmarks</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-76.htm">Working with Tasks</a><br><a href="tasks-77.htm">Adding line items in the Tasks view</a><br><a href="tasks-79.htm">Filtering the task list</a><br><a href="tasks-81b.htm">Creating a bookmark for an entire file</a><br><a href="tasks-81.htm">Creating a bookmark within a file</a></p><p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br><a href="../reference/ref-31.htm">Tasks view</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
