--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-84.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-84.htm
@@ -1,58 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><html><head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<meta http-equiv="Content-Style-Type" content="text/css">
-
-<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Searching for a text string within a file</title></head><body bgcolor="#ffffff">
-<h1 class="Head">
-Searching for text within a file</h1>
-<p class="Head">
-The <b>Go To</b> selection in the pop-up menu for the Navigator view allows you
-to quickly find a resource in the workbench by searching resource <i>names</i>.
-You can also do contextual searches for information that is contained <i>inside</i>
-files in the workbench.</p>
-<p class="Head">
-To find all files that contain a particular string of characters:</p>
-<ol>
-  <li>
-    <p>On the main toolbar, click the <b> Search</b> button <img align="Texttop" border="0" src="../images/Image50_search.jpg" alt=" " width="20" height="19">.
-  </p></li><li>
-    <p>Type your search string in the <b>Containing Text</b>
-    field. </p>
-    <p>Use the pull-down list to select a previously entered search
-    expression.</p>
-    <p>Use \ as an escape character for search strings that contain
-    the special characters *, ?, or \, for example: <samp>d:\\directory\\filename.ext</samp>.
-  
-  </p></li><li>
-    <p>Finish entering your search options, for example to scope
-    the search to specified file types, and click <b>Search</b>.
-    </p></li><li>The Search view displays the results of your search. Right-click on any item in
-the Search view to open a pop-up menu that allows you to remove items from the
-list, copy search results to the clipboard, or rerun the search. To open one of
-the listed files, double-click it or select <b>Go to File</b> from its pop-up
-menu.</li>
-</ol>
-<p>
-If you close the Search view, you can return to it later by selecting <b>Window
-&gt; Show View &gt; Other &gt; Basic &gt; Search</b>.</p>
-<p>
-</p>
-<p class="Para"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-<a href="../concepts/csearchview.htm"><br>Search view</a><br>
-</p>
-<p class="Para"><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-</a><a href="../tasks/tasks-84b.htm"><br>File searching</a>
-</p>
-<p class="Para"><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
-<a href="../reference/ref-26.htm">Search view</a>
-<br>
-<a href="../reference/ref-45.htm">File search</a>
-<br>
-</p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</body>
-</html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"><meta http-equiv="Content-Style-Type" content="text/css"><link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Searching for a text string within a file</title></head><body bgcolor="#ffffff"><h1 class="Head">Searching for text within a file</h1><p class="Head">The <b>Go To</b> selection in the pop-up menu for the Navigator view allows youto quickly find a resource in the workbench by searching resource <i>names</i>.You can also do contextual searches for information that is contained <i>inside</i>files in the workbench.</p><p class="Head">To find all files that contain a particular string of characters:</p><ol>  <li>    <p>On the main toolbar, click the <b> Search</b> button <img border="0" src="../images/Image50_search.jpg" alt="search icon" width="20" height="19">.  </p></li><li>    <p>Type your search string in the <b>Containing Text</b> field, or use the       pull-down list to select a previously entered search expression.</p>    <p>Use <code>\</code> as an escape character for search strings that contain the       special characters <code>*</code>, <code>?</code>, or <code>\</code>, 	  for example: <code>d:\\directory\\filename.ext</code>.     </p>  </li><li>    <p>Finish entering your search options, for example to scope    the search to specified file types, and click <b>Search</b>.    </p></li><li>The Search view displays the results of your search. Right-click on any item inthe Search view to open a pop-up menu that allows you to remove items from thelist, copy search results to the clipboard, or rerun the search. To open one ofthe listed files, double-click it or select <b>Go to File</b> from its pop-upmenu.</li></ol><p>If you close the Search view, you can return to it later by selecting <b>Window&gt; Show View &gt; Other &gt; Basic &gt; Search</b>.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/csearchview.htm">Search view</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="../tasks/tasks-84b.htm">File searching</a></p><p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br><a href="../reference/ref-26.htm">Search view</a><br><a href="../reference/ref-45.htm">File search</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></body></html>
