--- a/bundles/org.eclipse.platform.doc.user/tasks/tfonts.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tfonts.htm
@@ -1,47 +1,1 @@
-<html>
-
-<head>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Setting help fonts and colors for accessibility</title>
-</head>
-
-<body>
-
-<h1>Setting help fonts and colors for accessibility</h1>
-
-<p>The help browser uses system settings for the font colors,
-styles, and sizes in the  content. Users with visual impairments may wish to
-change some of these settings to increase the readability of the documentation.</p>
-<p>
-<img border="0" src="../images/ngwin.gif" alt="The following information applies to Windows." width="51" height="13">To change font size and color settings:</p>
-<ol>
-  <li><p>Open Microsoft Internet Explorer. The online documentation is displayed
-    in a component of Internet Explorer, so changes you make to its display
-    settings also affect the help display. </li>
-  <li><p>Select <b>Tools &gt; Internet Options</b>. </li>
-  <li><p>On the <b>General</b> page, click the <b>Accessibility</b> button. </li>
-  <li><p>Set the formatting options you desire. </li>
-  <li><p>Optionally, you can specify a cascading style sheet (CSS) to apply to 
-  the content. </li>
-  <li><p>Click <b>OK</b> and exit Internet Explorer. </li>
-  <li><p>Restart the workbench. Open the Help perspective and browse the
-    documentation to see the changes.</li>
-</ol>
-
-<p>For more information about creating a CSS, consult a
-CSS reference. The W3 Consortium (www.w3.org) has an extensive collection of
-information about CSS and links to valuable resources.</p>
-
-<p>
-<img border="0" src="../images/ngrelt.gif" alt="Related tasks" WIDTH="159" HEIGHT="27"><br>
-<a href="taccess.htm">Accessing and navigating online help</a></p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</body>
-</html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><html><head><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Setting help fonts and colors for accessibility</title></head><body><h1>Setting help fonts and colors for accessibility</h1><p>The help browser uses system settings for the font colors,styles, and sizes in the  content. Users with visual impairments may wish tochange some of these settings to increase the readability of the documentation.</p><p><img border="0" src="../images/ngwin.gif" alt="The following information applies to Windows." width="51" height="13">To change font size and color settings:</p><ol>  <li><p>Open Microsoft Internet Explorer. The online documentation is displayed    in a component of Internet Explorer, so changes you make to its display    settings also affect the help display. </li>  <li><p>Select <b>Tools &gt; Internet Options</b>. </li>  <li><p>On the <b>General</b> page, click the <b>Accessibility</b> button. </li>  <li><p>Set the formatting options you desire. </li>  <li><p>Optionally, you can specify a cascading style sheet (CSS) to apply to   the content. </li>  <li><p>Click <b>OK</b> and exit Internet Explorer. </li>  <li><p>Restart the workbench. Open the Help perspective and browse the    documentation to see the changes.</li></ol><p>For more information about creating a CSS, consult aCSS reference. The W3 Consortium (www.w3.org) has an extensive collection ofinformation about CSS and links to valuable resources.</p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" WIDTH="159" HEIGHT="27"><br><a href="taccess.htm">Accessing and navigating online help</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></body></html>
