*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs.htm
@@ -13,7 +13,7 @@ Dialogs and wizards
 <BODY BGCOLOR="#ffffff">
 <H1>Dialogs and wizards</H1>
 <P >
-We've already seen how to extend the workbench UI by adding views, editors, and actions to the workbench.&nbsp;
+We've seen how to extend the workbench UI by adding views, editors, and actions to the workbench.&nbsp;
 Now we can tie it all together by launching our own dialogs in response to these
 actions.</P>
 <P >
