--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_settings.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_settings.htm
@@ -33,8 +33,8 @@ boolean, long, double, float, int, array, and string values. The following snipp
       checkbox = new Button(parent,SWT.CHECK);
       checkbox.setText(&quot;Generate sample section titles&quot;);
       // initialize the checkbox according to the dialog settings
-      checkbox.setSelection(settings.getBoolean(&quot;GenSections&quot;));
-   }
+<b>      checkbox.setSelection(settings.getBoolean(&quot;GenSections&quot;));
+</b>   }
 </pre></font>
 <P >
 The value of the setting can be stored later when the ok button is pressed.</P>
@@ -42,8 +42,8 @@ The value of the setting can be stored later when the ok button is pressed.</P>
    protected void okPressed() {
       IDialogSettings settings = ReadmePlugin.getDefault().getDialogSettings();
       // store the value of the generate sections checkbox
-      settings.put(&quot;GenSections&quot;, checkbox.getSelection());
-      super.okPressed();
+<b>      settings.put(&quot;GenSections&quot;, checkbox.getSelection());
+</b>      super.okPressed();
    }
 </pre></font>
 
