--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_multipage.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_multipage.htm
@@ -59,7 +59,7 @@ WizardNewFileCreationPage</b></a> defines a common event handler for all SWT eve
    }
 </pre></font>
 <P >
-Once the <b> CreateReadme1</b> page creates its controls, it sets the state of the page using
+Once the <b>ReadmeCreationPage</b> creates its controls, it sets the state of the page using
 <b>validatePage</b>.</P>
 <font color='#4444CC'><pre>
    public void createControl(Composite parent) {
@@ -68,13 +68,16 @@ Once the <b> CreateReadme1</b> page creates its controls, it sets the state of t
       ...
       // sample section generation checkboxes
       sectionCheckbox = new Button(group,SWT.CHECK);
-      sectionCheckbox.setText(&quot;Generate sample section titles&quot;);
+      sectionCheckbox.setText(MessageUtil.getString(&quot;Generate_sample_section_titles&quot;));
       sectionCheckbox.setSelection(true);
+      sectionCheckbox.<b>addListener</b>(SWT.Selection,this);
 
-      // we add a listener to this checkbox
-      sectionCheckbox.addListener(SWT.Selection,this);
+      subsectionCheckbox = new Button(group,SWT.CHECK);
+      subsectionCheckbox.setText(MessageUtil.getString(&quot;Generate_sample_subsection_titles&quot;));
+      subsectionCheckbox.setSelection(true);
+      subsectionCheckbox.<b>addListener</b>(SWT.Selection,this);
       ...
-      setPageComplete(validatePage());
+      <b>setPageComplete(validatePage());</b>
    }
 </pre></font>
 <P >
