--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_applications.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_applications.htm
@@ -75,7 +75,7 @@ superclass.</P>
 <font color='#4444CC'><pre>
    protected void configureShell(Shell newShell) {
       super.configureShell(newShell);
-      newShell.setText(&quot;Readme Sections&quot;);
+      newShell.setText(MessageUtil.getString(&quot;Readme Sections&quot;));
       ...
    }
 </pre></font>
