--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40b.htm
@@ -55,7 +55,8 @@ Observe the Navigator view slides out from the shortcut bar.&nbsp; </P>
 <TD valign="top" align="left">
 <P CLASS="Para">
 You can use the Navigator fast view as you would normally.&nbsp;&nbsp;To resize
-a fastview, move the mouse to the right edge of the fastview. Then hold the left
+a fastview, move the mouse to the right edge of the fastview where the cursor
+will change to a double-headed arrow. Then hold the left
 mouse button down as you move the mouse. </P>
 </TD>
 </TR>
@@ -85,10 +86,10 @@ file.&nbsp;&nbsp; </P>
 
 
 <ul>
-  <li>Click the Restore button on the fast view's toolbar <br>
+  <li>Click the Fast View button on the fast view's toolbar <br>
     <img align="texttop" border="0" src="../images/Image61_fast_restore.jpg" width="264" height="69"><br>
   </li>
-  <li>Choose Restore from the context menu of the icon in the top left corner of
+  <li>Choose Fast View from the context menu of the icon in the top left corner of
     the view. </li>
 </ul>
 
